vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr_blcok
  tags = {
    Name = var.vpc-name
  }
}
